# tdda

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.txt  README.md  __init__.py  pushv  pyproject.toml  requirements.txt  rtdrequirements.txt  setup.cfg  setup.py  testtdda.py  writabletestcase.py
constraints/: README.md  base.py  pdconstraints.py  pdverify.py  tdda_json_file_format.md  testbase.py  testconstraints.py  testpdconstraints.py
constraints/examples/: elements_constrain_generation.py  example_constraints.tdda  pdgenerate.py  pdverifyelements1.py  pdverifyelements2.py  simple_disovery.py  simple_generation.py  simple_verification.py  simple_verify_fail.py  simple_verify_pass.py
constraints/testdata/: elements92.tdda
doc/: Makefile  README.txt
doc/source/: changes.txt  cmdline.txt  conf.py  constraints-api.txt  constraints.txt  examples.txt  gentest.txt  index.txt  installation.txt  overview.txt  referencetest.txt  rexpy-api.txt  rexpy.txt  tests.txt  windows.txt
examples/: generators.py  test_using_writabletestcase.py
examples/reference/: file_result.html  string_result.html
referencetest/: README.md  __init__.py  checkfiles.py  checkpandas.py  referencepytest.py  referencetest.py  referencetestcase.py
referencetest/examples/: README.txt  generators.py
referencetest/tests/: README.txt  alltests.py  example.py  testdataframes.py  testfiles.py  testpandas.py  testregeneration.py  teststrings.py
rexpy/: __init__.py  rexpy.py  testhypo.py  testrexpy.py
rexpy/examples/: agents9.txt
tdda/: BRANCHES  CHANGES.py  Makefile  __init__.py  config.py  debug.py  examples.py  params.py  pushv  state.py  tables.py  test_tdda.py  testconfig.py  testtdda.py  testutils.py  utils.py  version.py  writabletestcase.py
tdda/buildutils/: create_parquet_examples.py
tdda/constraints/: .base.py.swp  .pdconstraints.py.swp  README.md  __init__.py  api.py  base.py  baseconstraints.py  console.py  examples.py  extension.py  flags.py  pdconstraints.py  pddiscover.py  pdverify.py  tdda_json_file_format.md  testbase.py  testcommonconstraints.py  testconstraints.py  (+1 more)
(+949 files in other folders)
